# c-iterators

./: .clang-format  .gitattributes  .gitignore  ARCHITECTURE.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  Typeclass Pattern.md  array_iterable.c  array_iterable.h  func_iter.h  iterator.h  list_iterable.c  list_iterable.h  main.c  maybe.h  typeclass.h
docs/: annotated.html  annotated_dup.js  classes.html  files.html  files_dup.js  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  graph_legend.html  index.html  iterator_8h.html  iterator_8h.js  iterator_8h_source.html  maybe_8h.html  maybe_8h.js  maybe_8h__dep__incl.map  maybe_8h__dep__incl.md5  maybe_8h_source.html  md_ARCHITECTURE.html  md_README.html  md_Typeclass_Pattern.html  menudata.js  navtreedata.js  navtreeindex0.js  pages.html  structMaybeTag.html  typeclass_8h.html  typeclass_8h.js  typeclass_8h__dep__incl.map  typeclass_8h__dep__incl.md5  typeclass_8h_source.html
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.html  defines_3.js  defines_4.html  defines_4.js  defines_5.html  defines_5.js  defines_6.html  defines_6.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  pages_0.js  pages_1.js  pages_2.js  searchdata.js
examples/: CMakeLists.txt  README.md  arr_to_iterble.c  array_iterable.c  array_iterable.h  examples.h  fibbonacci.c  fibonacci_iterable.c  fibonacci_iterable.h  func_iter.h  iterable_utils.c  iterable_utils.h  iterator_iterable.c  iterator_iterable.h  list_from_arr.c  list_iterable.c  list_iterable.h  list_to_iterble.c  main.c  map_over.c  take.h
examples/iterutils/: iterable_utils.c  iterable_utils.h  map.h  take.h
